// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MTextArea max-length should render correctly state when text length is lesser than max length 1`] = `
<div class="m-textarea" style="width:100%;max-width:288px;">
    <div class="m-input-style m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <textarea rows="1" class="m-textarea__input">1</textarea>
            </div>
            <div class="m-input-style__body__right"></div>
        </div>
    </div>
    <div class="m-textarea__validation">
        <div class="m-validation-message m-textarea__validation__message">
            <m-accordion-transition transition="true"></m-accordion-transition>
        </div>
        <m-character-count valueLength="1" maxLength="8" threshold="0" transition="true"></m-character-count>
    </div>
</div>
`;

exports[`MTextArea max-length should render invalid state when text length is greater than max length 1`] = `
<div class="m-textarea" style="width:100%;max-width:288px;">
    <div class="m-input-style m--has-value m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <textarea rows="1" class="m-textarea__input">123456789</textarea>
            </div>
            <div class="m-input-style__body__right"></div>
        </div>
    </div>
    <div class="m-textarea__validation">
        <div class="m-validation-message m-textarea__validation__message">
            <m-accordion-transition transition="true"></m-accordion-transition>
        </div>
        <m-character-count valueLength="9" maxLength="8" threshold="0" transition="true"></m-character-count>
    </div>
</div>
`;

exports[`MTextArea should render correctly 1`] = `
<div class="m-textarea" style="width:100%;max-width:288px;">
    <div class="m-input-style m--is-tag-default" style="width:undefined;">
        <div class="m-input-style__body">
            <div class="m-input-style__body__left">
                <textarea rows="1" class="m-textarea__input"></textarea>
            </div>
            <div class="m-input-style__body__right"></div>
        </div>
    </div>
    <div class="m-textarea__validation">
        <div class="m-validation-message m-textarea__validation__message">
            <m-accordion-transition transition="true"></m-accordion-transition>
        </div>
        <m-character-count valueLength="0" threshold="0" transition="true"></m-character-count>
    </div>
</div>
`;
